@@ -19,6 +19,7 @@ export(EventList2TofSpec)
 export(FindTpsIp)
 export(FitSinglePeak)
 export(FitSinglePeak2)
+export(FitTofDataSinglePeak)
 export(GetAcquisitionLogFromH5)
 export(GetBufTimeFromH5)
 export(GetBufTimeFromShMem)
@@ -70,6 +71,7 @@ export(GetTimeout)
 export(GetTimingData)
 export(GetTofData)
 export(GetTofData2)
+export(GetTofDataSinglePeak)
 export(GetTofSpectrum2FromH5)
 export(GetTofSpectrumFromH5)
 export(GetTofSpectrumFromShMem)
